Added paragraphs to evidence section

--- a/design-evidence.html
+++ b/design-evidence.html
@@ -75,7 +75,8 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Evidence</h2>
-            <h3 class="section-subheading text-muted">I have chosen this design based off of colour theory, for example I have chosen complimentary colours that compliment each other (black and red). I chose these colours as they really go well with each other. I chose this font style as its quite bold and it stands out which would draw more people to read my page.The way my page is layed out is quite useful as its easily accessible, as you have information about me on my homepage and this lists out what my website will include.</h3>
+            <h3 class="section-subheading text-muted">The reason why I chose the colours on my website is because they all compliment each other in a way that expresses emotions on my website relating to my portfolio. This leads to the psychology of colours (BEST, 2017), for example I have chosen red as this reflects off an exciting emotion, colour really creates an aesthetic. Colour has a lot of visual effects to us, it shows us how the colours send a message of communication to us and we all perceive colours in different ways.</h3>
+            <p class="section-subheading text-muted">You can create different shades of colours from one colour, from the RGB model. So the more light you add the lighter the colour. I decided to keep my colours the same tone, as it really worked for my website as it all kept to the same theme. A hex code colour represents a RGB format by combining three values, the amount of primary colours In a particular shade of colour, I used the shade fed136. These colours have been a part of web design for a long time, and they remain a key way of representing colour formats digitally (Definition from Techopedia, 2021).</p>
           </div>
         </div>
       </div>
