--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -109,13 +109,13 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?nature,sea" alt="">
+            <img class="img-fluid" src="img/portfolio-image-3.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Image 3</h4>
