--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -70,6 +70,78 @@
 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2907513380050664%2C53.45667472595531%2C-2.2838526964187627%2C53.45880516251496&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=18/53.45774/-2.28730">View Larger Map</a></small>
 </div>
 
+<!-- Page Content -->
+<div class="container mt-5">
+
+  <!-- Page Heading -->
+  <h1 class="my-4">Code Snippet
+    <small>Two Column</small>
+  </h1>
+
+  <div class="row">
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+      <img class="card-img-top" src="img/portfolio-image-1.jpg" alt="">
+        <div class="card-body">
+          <h4 class="card-title">
+            Box One
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+  <img class="card-img-top" src="img/portfolio-image-2.jpg" alt="">
+        <div class="card-body">
+          <h4 class="card-title">
+            Box Two has no images
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="img/portfolio-image-3.jpg" alt="">
+        <div class="card-body">
+          <h4 class="card-title">
+            Box Three
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-7 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top" src="img/portfolio-image-4.jpg" alt="">
+        <div class="card-body">
+          <h4 class="card-title">
+            Box Four
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 mb-4">
+      <div class="card h-100">
+
+        <div class="card-body">
+          <h4 class="card-title">
+          Box Five
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+        <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+      </div>
+    </div>
+    </div>
+  </div>
+  <!-- /.row -->
+
+</div>
+<!-- /.container -->
+
   <!-- Portfolio Grid -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
