--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -84,7 +84,7 @@
       <img class="card-img-top" src="img/portfolio-image-1.jpg" alt="">
         <div class="card-body">
           <h4 class="card-title">
-            Box One
+            Image 1
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -112,7 +112,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-7 mb-4">
+    <div class="col-lg-6 mb-4">
       <div class="card h-100">
         <img class="card-img-top" src="img/portfolio-image-4.jpg" alt="">
         <div class="card-body">
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 mb-4">
+    <div class="col-lg-6 mb-4">
       <div class="card h-100">
 
         <div class="card-body">
@@ -132,7 +132,7 @@
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
-        <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+        <img class="card-img-top" src="img/portfolio-image-5.jpg" alt="">
       </div>
     </div>
     </div>
@@ -142,89 +142,6 @@
 </div>
 <!-- /.container -->
 
-  <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">These are a selection of my photos</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-image-1.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Image 1</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-image-2.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Image 2</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-image-3.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Image 3</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?nature,sky" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Image 4</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?nature,grass" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Image 5</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
   <!-- Clients -->
