--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -95,7 +95,7 @@
   <img class="card-img-top" src="img/portfolio-image-2.jpg" alt="">
         <div class="card-body">
           <h4 class="card-title">
-            Box Two has no images
+            Image 2
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -106,7 +106,7 @@
         <img class="card-img-top" src="img/portfolio-image-3.jpg" alt="">
         <div class="card-body">
           <h4 class="card-title">
-            Box Three
+            Image 3
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
@@ -117,7 +117,7 @@
         <img class="card-img-top" src="img/portfolio-image-4.jpg" alt="">
         <div class="card-body">
           <h4 class="card-title">
-            Box Four
+            Image 4
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
         </div>
@@ -128,7 +128,7 @@
 
         <div class="card-body">
           <h4 class="card-title">
-          Box Five
+          Image 5
           </h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
         </div>
