Changed heading to portfolio

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -74,8 +74,8 @@
 <div class="container mt-5">
 
   <!-- Page Heading -->
-  <h1 class="my-4">Code Snippet
-    <small>Two Column</small>
+  <h1 class="my-4">
+    <small>Portfolio</small>
   </h1>
 
   <div class="row">
@@ -86,7 +86,7 @@
           <h4 class="card-title">
             Image 1
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
