Got rid of text

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -97,7 +97,7 @@
           <h4 class="card-title">
             Image 2
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
           <h4 class="card-title">
             Image 3
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
           <h4 class="card-title">
             Image 4
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text"></p>
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
           <h4 class="card-title">
           Image 5
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text"></p>
         </div>
         <img class="card-img-top" src="img/portfolio-image-5.jpg" alt="">
       </div>
