--- a/index.html
+++ b/index.html
@@ -60,67 +60,17 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around manchester, plus a 3 minute video.</h3>
+            <h3 class="section-subheading text-muted">Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around manchester, plus a 2 minute video.</h3>
           </div>
         </div>
       </div>
     </section>
 
-  <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Illustrations of my work</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?camera" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Photography</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?urban" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Video</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="https://source.unsplash.com/700x525/?design" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Design</h4>
-            <p class="text-muted"></p>
-          </div>
-        </div>
-      </div>
+    <div class="container mt-5">
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2907513380050664%2C53.45667472595531%2C-2.2838526964187627%2C53.45880516251496&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=18/53.45774/-2.28730">View Larger Map</a></small>
     </div>
-  </section>
+
+
 
   <!-- Clients -->
   <section class="py-5">
