--- a/design-evidence.html
+++ b/design-evidence.html
@@ -75,6 +75,22 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Evidence</h2>
+            <!-- One Featured Post -->
+
+<div class="container mt-4">
+
+        <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
+          <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic">Title of a longer featured post</h1>
+            <p class="lead my-3">The reason why I chose the colours on my website is because they all compliment each other in a way that expresses emotions on my website relating to my portfolio. This leads to the psychology of colours (BEST, 2017), for example I have chosen red as this reflects off an exciting emotion, colour really creates an aesthetic. Colour has a lot of visual effects to us, it shows us how the colours send a message of communication to us and we all perceive colours in different ways.You can create different shades of colours from one colour, from the RGB model. So the more light you add the lighter the colour. I decided to keep my colours the same tone, as it really worked for my website as it all kept to the same theme. A hex code colour represents a RGB format by combining three values, the amount of primary colours In a particular shade of colour, I used the shade fed136. These colours have been a part of web design for a long time, and they remain a key way of representing colour formats digitally (Definition from Techopedia, 2021).</p>
+            <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+          </div>
+        </div>
+
+  </div>
+
+<!-- End of One Featured Post -->
+
             <p class="section-subheading text-muted">The reason why I chose the colours on my website is because they all compliment each other in a way that expresses emotions on my website relating to my portfolio. This leads to the psychology of colours (BEST, 2017), for example I have chosen red as this reflects off an exciting emotion, colour really creates an aesthetic. Colour has a lot of visual effects to us, it shows us how the colours send a message of communication to us and we all perceive colours in different ways.</p>
             <p class="section-subheading text-muted">You can create different shades of colours from one colour, from the RGB model. So the more light you add the lighter the colour. I decided to keep my colours the same tone, as it really worked for my website as it all kept to the same theme. A hex code colour represents a RGB format by combining three values, the amount of primary colours In a particular shade of colour, I used the shade fed136. These colours have been a part of web design for a long time, and they remain a key way of representing colour formats digitally (Definition from Techopedia, 2021).</p>
             <p class="section-subheading text-muted">Typography is the art of arranging letters and text which makes it legible for the reader to understand clearly and concisely. This includes the types of fonts used the styles and the size, typography really brings the text to life. So you have got to pick the right font and style which best suits your website. I used the font Noto Serif, this font really attracted me as it was just what I wanted. I wanted a bold basic style font so it was clear for the users and easy to read.</p>
