Changed some colours of text

--- a/design-evidence.html
+++ b/design-evidence.html
@@ -81,7 +81,7 @@
 
         <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
           <div class="col-md-6 px-0">
-            <h1 class="display-4 font-italic">Title of a longer featured post</h1>
+            <h1 class="display-4 font-">Colour Theory</h1>
             <p class="lead my-3">The reason why I chose the colours on my website is because they all compliment each other in a way that expresses emotions on my website relating to my portfolio. This leads to the psychology of colours (BEST, 2017), for example I have chosen red as this reflects off an exciting emotion, colour really creates an aesthetic. Colour has a lot of visual effects to us, it shows us how the colours send a message of communication to us and we all perceive colours in different ways.You can create different shades of colours from one colour, from the RGB model. So the more light you add the lighter the colour. I decided to keep my colours the same tone, as it really worked for my website as it all kept to the same theme. A hex code colour represents a RGB format by combining three values, the amount of primary colours In a particular shade of colour, I used the shade fed136. These colours have been a part of web design for a long time, and they remain a key way of representing colour formats digitally (Definition from Techopedia, 2021).</p>
             <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
           </div>
