--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
   <div class="container mt-5">
 
-  <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-2.2879661324259364%2C53.4570137828038%2C-2.2829450371500575%2C53.45914420235244&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=18/53.45808/-2.28546">View Larger Map</a></small>
+    <object data="https://www.openstreetmap.org/export/embed.html?bbox=-2.2879661324259364%2C53.4570137828038%2C-2.2829450371500575%2C53.45914420235244&amp;layer=mapnik" border="1" width="100%" height="350">
+  </object>
 
 
   </div>
