changed colours of text

--- a/design-evidence.html
+++ b/design-evidence.html
@@ -114,7 +114,7 @@
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
-<h1 class="display-4 font-">Accesibility</h1>
+<h1 class="display-4 font-">Accessibility</h1>
 <p class="lead my-3">The accessibility of a website makes the experience open to everyone, and the inclusive design of a website enables and draws on the full range of human diversity. I have designed my website so that it is easy to navigate for online users, making it easily accessible. My website is clear and concise enough for people to visually see it without needing the ability to adapt to it. This is because the size of the text is clear enough for the user to see and read, and the layout is also accessible.</p>
 <p class="lead my-3">Accessibility is important when it comes to web design, as we have got to be inclusive when it comes to the design of our websites. If it’s not accessible to our disabled users then we could be asked to redesign our website, and can face a fine if failure to do so, this is why I have included the main navigation links at the top of each page (Duckett, 2005).</p>
 <p class="lead mb-0">Continue reading...</p>
