Changed name of video evidence page

--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -61,7 +61,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase">Video & Photography Evidence</div>
+        <div class="intro-heading text-uppercase">Video & Photo Evidence</div>
       </div>
     </div>
   </header>
