--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -73,11 +73,55 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Evidence</h2>
-            <h3 class="section-subheading text-muted">Coming soon</h3>
-          </div>
-        </div>
       </div>
-    </section>
+    </section><!-- One Featured Post -->
+
+<div class="container mt-4">
+
+<div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
+  <div class="col-md-12 px-0">
+    <h1 class="display-4 font-"></h1>
+    <p class="lead my-3"></p>
+    <p class="lead my-3"></p>
+    <p class="lead mb-0">Continue reading...</p>
+  </div>
+</div>
+
+</div>
+
+<!-- End of One Featured Post -->
+
+<!-- One Featured Post -->
+
+<div class="container mt-4">
+
+<div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
+<div class="col-md-12 px-0">
+<h1 class="display-4 font-"></h1>
+<p class="lead my-3"></p>
+<p class="lead my-3"></p>
+<p class="lead mb-0">Continue reading...</p>
+</div>
+
+</div>
+
+<!-- End of One Featured Post -->
+
+<!-- One Featured Post -->
+
+<div class="container mt-4">
+
+<div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
+<div class="col-md-12 px-0">
+<h1 class="display-4 font-"></h1>
+<p class="lead my-3"></p>
+<p class="lead my-3"></p>
+<p class="lead mb-0">Continue reading...</p>
+</div>
+
+</div>
+
+<!-- End of One Featured Post -->
 
 
 
