--- a/index.html
+++ b/index.html
@@ -57,17 +57,20 @@
 
 
 
-    <!-- About -->
-    <section class="page-section" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around manchester, plus a 2 minute video.</h3>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- One Featured Post -->
+
+<div class="container mt-4">
+
+<div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
+  <div class="col-md-12 px-0">
+    <h1 class="display-4 font-">About</h1>
+    <p class="lead my-3">Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around manchester, plus a 2 minute video.</p>
+  </div>
+</div>
+
+</div>
+
+<!-- End of One Featured Post -->
 
 
   <div class="container mt-5">
