changed about me page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
   <div class="col-md-12 px-0">
     <h1 class="display-4 font-">About</h1>
-    <p class="lead my-3">Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around manchester, plus a 2 minute video.</p>
+    <p class="lead my-3">Hi I am Georgia and I am a first year media and communications student at University Academy 92. Welcome to my website, I am going to showcase many of my skills, including a photography portfolio, video production and some design. My portfolio will consist of 5 images that are taken around Manchester, plus a 2 minute video.</p>
+    <p class="lead my-3">For a while I have been interested in Photography but I never really had the time to pursue this, this module has allowed me to demonstrate my skills in this area, which I have really enjoyed. I hope you like my portfolio of  photos and my video. </p>
   </div>
 </div>
 
