--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -80,7 +80,7 @@
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
   <div class="col-md-12 px-0">
-    <h1 class="display-4 font-"></h1>
+    <h1 class="display-4 font-">Photography basics</h1>
     <p class="lead my-3"></p>
     <p class="lead my-3"></p>
     <p class="lead mb-0">Continue reading...</p>
@@ -97,7 +97,7 @@
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
-<h1 class="display-4 font-"></h1>
+<h1 class="display-4 font-">Video production basics</h1>
 <p class="lead my-3"></p>
 <p class="lead my-3"></p>
 <p class="lead mb-0">Continue reading...</p>
@@ -113,7 +113,7 @@
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
-<h1 class="display-4 font-"></h1>
+<h1 class="display-4 font-">Social media delivery formats</h1>
 <p class="lead my-3"></p>
 <p class="lead my-3"></p>
 <p class="lead mb-0">Continue reading...</p>
