Added my photo text

--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -81,9 +81,10 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
   <div class="col-md-12 px-0">
     <h1 class="display-4 font-">Photography basics</h1>
-    <p class="lead my-3"></p>
-    <p class="lead my-3"></p>
-    <p class="lead mb-0">Continue reading...</p>
+    <p class="lead my-3">One thing that is involved in photography basics is the exposure triangle, which involves three components; aperture, ISO, and the shutter speed. The aperture refers to the size of the hole that lets in light, so the shallower the depth of field the larger the aperture. The ISO is the sensitivity of the digital sensor. The shutter speed is the length of the time light is allowed to hit the sensor. I used my mobile phone instead of a camera so all of these elements involved in the exposure triangle were done automatically (Sammon, n.d.).</p>
+    <p class="lead my-3">I decided to use my phone instead of a camera as it was easier for me to transport, as it was easier to carry in my pocket.  Modern technology has allowed us to advance within society, meaning advancements in our smart phone cameras, they allow you to focus on certain elements within your photo, which really enhances the image. My images really capture the rule of thirds, in which they are proportionate to this. The images that I have used are nicely composed, as in the backgrounds I have chosen are very simple and are easily understood.  The exposure and brightness of each of my pictures, is also at the right level. I chose to do street art as you can really explore the different types of art and get a variety of images.</p>
+    <h1 class="display-4 font-">Bibliography</h1>
+    <p class="lead mb-0">•	Sammon, R., n.d. Rick Sammon's exploring photographic exposure.</p>
   </div>
 </div>
 
