--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -78,7 +78,7 @@
   <div class="row">
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-      <img class="card-img-top" src="img/portfolio-image-5.jpg" alt="">
+      <img class="card-img-top" src="img/portfolio-image-5.jpg" alt="A mosaic portrait of a woman surrounded by an array of flowers.">
         <div class="card-body">
           <h4 class="card-title">
             Image 1
@@ -89,7 +89,7 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-  <img class="card-img-top" src="img/portfolio-image-4.jpg" alt="">
+  <img class="card-img-top" src="img/portfolio-image-4.jpg" alt="Split into a hierachy of different tiers from our pandemic, shaped into baubles from christmas.">
         <div class="card-body">
           <h4 class="card-title">
             Image 2
@@ -100,7 +100,7 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <img class="card-img-top" src="img/portfolio-image-3.jpg" alt="">
+        <img class="card-img-top" src="img/portfolio-image-3.jpg" alt="A row of different types of street art potraying different music scenes around manchester, plus its different types of art.">
         <div class="card-body">
           <h4 class="card-title">
             Image 3
@@ -111,7 +111,7 @@
     </div>
     <div class="col-lg-6 mb-4">
       <div class="card h-100">
-        <img class="card-img-top" src="img/portfolio-image-2.jpg" alt="">
+        <img class="card-img-top" src="img/portfolio-image-2.jpg" alt="From the black lifes matter movement, a very moving peice of street art, stating the words respect my existence or expect my resitance.">
         <div class="card-body">
           <h4 class="card-title">
             Image 4
@@ -124,7 +124,7 @@
       <div class="card h-100">
 
 
-        <img class="card-img-top" src="img/portfolio-image-1.jpg" alt="">
+        <img class="card-img-top" src="img/portfolio-image-1.jpg" alt="Two women are on a billboard, in what seems to be a starry night under the water with an array of jellyfish, with alot of colours.">
         <div class="card-body">
           <h4 class="card-title">
           Image 5
