--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -99,9 +99,10 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
 <h1 class="display-4 font-">Video production basics</h1>
-<p class="lead my-3"></p>
-<p class="lead my-3"></p>
-<p class="lead mb-0">Continue reading...</p>
+<p class="lead my-3">In our group video we had been given a brief from BBC to produce a short clip for MOTDX, as a group we decided to do this based on memorable goals. We recorded our video in many places around Old Trafford, including in front of the stadium. In the basics of filming a video you need to make sure that you have the right lighting (Lyver and Swainson, 1999), this is important as cameras respond to light differently the human eye does. They do not pick it up as well as we do so we need to give the camera additional help in order for this to be correct. We can do this by adding studio lights. </p>
+<p class="lead my-3">In order for you to be safe whilst out filming you need to do a risk assessment. You need to make sure that you have a suitable location and permission to film there. Is the location and what your filming it on ethical? You need to take in to account how people may feel about what you are filming and where you are doing it. If there were to be an injury withing the group who you are filming with you need to go about this in the right way. You need to contact your tutor and let them know of the situation and whereabouts you are. </p>
+<h1 class="display-4 font-">Bibliography</h1>
+<p class="lead mb-0">•	Lyver, D. and Swainson, G., 1999. Basics of video lighting. Oxford [England]: Focal Press.</p>
 </div>
 
 </div>
