--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -116,9 +116,10 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
 <h1 class="display-4 font-">Social media delivery formats</h1>
-<p class="lead my-3"></p>
-<p class="lead my-3"></p>
-<p class="lead mb-0">Continue reading...</p>
+<p class="lead my-3">After we finished filmed and edited our video we decided to upload it to the social platform Youtube, and decided to upload our social media piece via TikTok. We thought TikTok was the best platform to use, as its really interactive to the users that we want to attract. When you’re scrolling through social media you don’t want to watch a two minute video, you want it to be quick and snappy, and to the point. We decided to use TikTok as after research we decided it was the most appropriate social platform to use based on the themes of the project, as it adapts to our users attention span. </p>
+<p class="lead my-3">TikToks video dimensions are 1080 by 1920, the aspect ratio should be 9:16. The aspect ratio is the ratio between the width and height of the screen. This is important as you need the right aspect ratio for different platforms. Instead of a landscape video that we used for YouTube we have had to convert it to fit the social media platform, which is portrait. Compared to a broadcast video a social media video needs to be less formal and more casual. It needs to have a more of a comedic value to it rather then the formality of a broadcast. (Schreer, 2014)</p>
+<h1 class="display-4 font-">Bibliography</h1>
+<p class="lead mb-0">•	Schreer, O., 2014. Media production, delivery, and interaction for platform independent systems. Chichester, West Sussex, United Kingdom: John Wiley & Sons Inc.</p>
 </div>
 
 </div>
