Added video on youtube and description

--- a/video-production.html
+++ b/video-production.html
@@ -71,17 +71,17 @@
 
         <!-- Page Heading -->
         <h1 class="my-4">Video
-          <small>Coming soon</small>
+          <small>On Youtube</small>
         </h1>
 
         <!-- Project One -->
         <div class="row">
           <div class="col-md-7">
-              <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/71254582?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gdRx8_jSbY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-md-5">
-            <h3>Description</h3>
-            <p>Coming soon</p>
+            <h3>About</h3>
+            <p>This is a two minute video which features a snippet of some short clips commentating a remake of some of Ronaldos goals. Starting out with two presenters in the studio, followed along by our sports presenters and footballers.</p>
           </div>
         </div>
         <!-- /.row -->
