--- a/design-evidence.html
+++ b/design-evidence.html
@@ -66,8 +66,7 @@
     </div>
   </header>
 
-  <!-- Page Content -->
-  <div class="container mt-5">
+
 
     <!-- About -->
     <section class="page-section" id="about">
@@ -75,6 +74,10 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Evidence</h2>
+          </div>
+        </div>
+      </div>
+    </section>
             <!-- One Featured Post -->
 
 <div class="container mt-4">
@@ -91,13 +94,13 @@
           </div>
         </div>
 
-  </div>
+
 
 <!-- End of One Featured Post -->
 
 <!-- One Featured Post -->
 
-<div class="container mt-4">
+
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
@@ -113,8 +116,6 @@
 <!-- End of One Featured Post -->
 
 <!-- One Featured Post -->
-
-<div class="container mt-4">
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
