--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -73,8 +73,11 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Evidence</h2>
+          </div>
       </div>
-    </section><!-- One Featured Post -->
+    </div>
+    </section>
+    <!-- One Featured Post -->
 
 <div class="container mt-4">
 
@@ -88,14 +91,10 @@
   </div>
 </div>
 
-</div>
 
 <!-- End of One Featured Post -->
 
 <!-- One Featured Post -->
-
-<div class="container mt-4">
-
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
 <h1 class="display-4 font-">Video production basics</h1>
@@ -111,7 +110,6 @@
 
 <!-- One Featured Post -->
 
-<div class="container mt-4">
 
 <div class="jumbotron p-3 p-md-5 text-white rounded featured-background">
 <div class="col-md-12 px-0">
