--- a/video-photography-evidence.html
+++ b/video-photography-evidence.html
@@ -87,7 +87,7 @@
     <p class="lead my-3">One thing that is involved in photography basics is the exposure triangle, which involves three components; aperture, ISO, and the shutter speed. The aperture refers to the size of the hole that lets in light, so the shallower the depth of field the larger the aperture. The ISO is the sensitivity of the digital sensor. The shutter speed is the length of the time light is allowed to hit the sensor. I used my mobile phone instead of a camera so all of these elements involved in the exposure triangle were done automatically (Sammon, n.d.).</p>
     <p class="lead my-3">I decided to use my phone instead of a camera as it was easier for me to transport, as it was easier to carry in my pocket. Modern technology has allowed us to advance within society, meaning advancements in our smart phone cameras, they allow you to focus on certain elements within your photo, which really enhances the image. My images really capture the rule of thirds, in which they are proportionate to this. The images that I have used are nicely composed, as in the backgrounds I have chosen are very simple and are easily understood. The exposure and brightness of each of my pictures, is also at the right level. I chose to do street art as you can really explore the different types of art and get a variety of images.</p>
     <h1 class="display-4 font-">Bibliography</h1>
-    <p class="lead mb-0">•	Sammon, R., n.d. Rick Sammon's exploring photographic exposure.</p>
+    <p class="lead mb-0">•	Sammon, R, n.d. Rick Sammon's exploring photographic exposure.</p>
   </div>
 </div>
 
@@ -101,7 +101,7 @@
 <p class="lead my-3">In our group video we had been given a brief from BBC to produce a short clip for MOTDX, as a group we decided to do this based on memorable goals. We recorded our video in many places around Old Trafford, including in front of the stadium. In the basics of filming a video you need to make sure that you have the right lighting (Lyver and Swainson, 1999), this is important as cameras respond to light differently the human eye does. They do not pick it up as well as we do so we need to give the camera additional help in order for this to be correct. We can do this by adding studio lights. </p>
 <p class="lead my-3">In order for you to be safe whilst out filming you need to do a risk assessment. You need to make sure that you have a suitable location and permission to film there. Is the location and what your filming it on ethical? You need to take in to account how people may feel about what you are filming and where you are doing it. If there were to be an injury withing the group who you are filming with you need to go about this in the right way. You need to contact your tutor and let them know of the situation and whereabouts you are. </p>
 <h1 class="display-4 font-">Bibliography</h1>
-<p class="lead mb-0">•	Lyver, D. and Swainson, G., 1999. Basics of video lighting. Oxford [England]: Focal Press.</p>
+<p class="lead mb-0">•	Lyver, D. and Swainson, G, (1999.) Basics of video lighting. Oxford [England]: Focal Press.</p>
 </div>
 
 </div>
@@ -117,7 +117,7 @@
 <p class="lead my-3">After we finished filmed and edited our video we decided to upload it to the social platform Youtube, and decided to upload our social media piece via TikTok. We thought TikTok was the best platform to use, as its really interactive to the users that we want to attract. When you’re scrolling through social media you don’t want to watch a two minute video, you want it to be quick and snappy, and to the point. We decided to use TikTok as after research we decided it was the most appropriate social platform to use based on the themes of the project, as it adapts to our users attention span. </p>
 <p class="lead my-3">TikToks video dimensions are 1080 by 1920, the aspect ratio should be 9:16. The aspect ratio is the ratio between the width and height of the screen. This is important as you need the right aspect ratio for different platforms. Instead of a landscape video that we used for YouTube we have had to convert it to fit the social media platform, which is portrait. Compared to a broadcast video a social media video needs to be less formal and more casual. It needs to have a more of a comedic value to it rather then the formality of a broadcast. (Schreer, 2014)</p>
 <h1 class="display-4 font-">Bibliography</h1>
-<p class="lead mb-0">•	Schreer, O., 2014. Media production, delivery, and interaction for platform independent systems. Chichester, West Sussex, United Kingdom: John Wiley & Sons Inc.</p>
+<p class="lead mb-0">•	Schreer, O, (2014.) Media production, delivery, and interaction for platform independent systems. Chichester, West Sussex, United Kingdom: John Wiley & Sons Inc.</p>
 </div>
 
 </div>
