--- a/design-evidence.html
+++ b/design-evidence.html
@@ -88,7 +88,7 @@
             <p class="lead my-3">The reason why I chose the colours on my website is because they all compliment each other in a way that expresses emotions on my website relating to my portfolio. This leads to the psychology of colours (BEST, 2017), for example I have chosen the colour blue as this reflects off an dependable emotion, the colours really create an aesthetic. Colour has a lot of visual effects to us, it shows us how the colours send a message of communication to us and we all perceive colours in different ways.You can create different shades of colours from one colour, from the RGB model.</p>
             <p class="lead my-3">So the more light you add the lighter the colour. I decided to keep my colours the same tone, as it really worked for my website as it all kept to the same theme. A hex code colour represents a RGB format by combining three values, the amount of primary colours In a particular shade of colour, I used the shade 61a2ea. These colours have been a part of web design for a long time, and they remain a key way of representing colour formats digitally (Definition from Techopedia, 2021). You have got to be really careful when it comes to choosing your colours, you have got to think about how they contrast each other.</p>
             <h1 class="display-4 font-">Bibliography</h1>
-            <p class="lead mb-0">•	BEST, J., (2017.) COLOUR DESIGN. [S.l.]: WOODHEAD, p.192.
+            <p class="lead mb-0">•	BEST, J, (2017.) COLOUR DESIGN. [S.l.]: WOODHEAD, p.192.
 •	Techopedia.com. (2021.) What is a Color Hex Code? - Definition from Techopedia. [online] Available at: <https://www.techopedia.com/definition/29788/color-hex-code> [Accessed 5 April 2021].
 </p>
           </div>
@@ -108,7 +108,7 @@
 <p class="lead my-3">Typography is the art of arranging letters and text which makes it legible for the reader to understand clearly and concisely. This includes the types of fonts used the styles and the size, typography really brings the text to life. So you have got to pick the right font and style which best suits your website. I used the font Cabin, this font really attracted me as it was just what I wanted. I wanted a bold basic style font so it was clear for the users and easy to read.</p>
 <p class="lead my-3">Typography provides a balance within the website, and sets the overall tone. Typography guides and informs users, which optimises the accessibility, which overall increases the overall user experience. If you keep the same type of typography within your website, users will be able to associate that type of typography with you, so this creates a stronger user following, and you begin to build trust with your users (Hannah, 2021).In typography you need to think about the typography hierarchy, so you need to think about how different types of text need to be styled correctly. For example my headings are much bolder then my paragraphs on my website, which is an example of typography hierarchy.</p>
   <h1 class="display-4 font-">Bibliography</h1>
-<p class="lead mb-0">•	Hannah, J., (2021.) What Is Typography, And Why Is It Important? A Beginner’s Guide. [online] Careerfoundry.com. Available at: <https://careerfoundry.com/en/blog/ui-design/beginners-guide-to-typography/#:~:text=In%20essence%2C%20typography%20is%20the,emotions%20and%20convey%20specific%20messages.> [Accessed 5 April 2021].</p>
+<p class="lead mb-0">•	Hannah, J, (2021.) What Is Typography, And Why Is It Important? A Beginner’s Guide. [online] Careerfoundry.com. Available at: <https://careerfoundry.com/en/blog/ui-design/beginners-guide-to-typography/#:~:text=In%20essence%2C%20typography%20is%20the,emotions%20and%20convey%20specific%20messages.> [Accessed 5 April 2021].</p>
 </div>
 
 </div>
@@ -123,7 +123,7 @@
 <p class="lead my-3">The accessibility of a website makes the experience open to everyone, and the inclusive design of a website enables and draws on the full range of human diversity. I have designed my website so that it is easy to navigate for online users, making it easily accessible. My website is clear and concise enough for people to visually see it without needing the ability to adapt to it. This is because the size of the text is clear enough for the user to see and read, and the layout is also accessible.</p>
 <p class="lead my-3">Accessibility is important when it comes to web design, as we have got to be inclusive when it comes to the design of our websites. If it’s not accessible to our disabled users then we could be asked to redesign our website, and can face a fine if failure to do so, this is why I have included the main navigation links at the top of each page (Duckett, 2005).I have targeted my website towards all users, so its accessible and inclusive to everyone, the typography I have used is bold and clear so it’s easy to see. The colours I have used are not too bright so it wont strain peoples eyes. </p>
 <h1 class="display-4 font-">Bibliography</h1>
-<p class="lead mb-0">•	Duckett, J., 2005. Accessible XHTML and CSS Web sites problem, design, solution. Indianapolis, IN: Wiley, p.243.</p>
+<p class="lead mb-0">•	Duckett, J, (2005.) Accessible XHTML and CSS Web sites problem, design, solution. Indianapolis, IN: Wiley, p.243.</p>
 </div>
 
 </div>
