Added the tiktok video and description

--- a/video-production.html
+++ b/video-production.html
@@ -86,6 +86,18 @@
         </div>
         <!-- /.row -->
 
+        <!-- Project Two -->
+        <div class="row">
+          <div class="col-md-7">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kQS0R3VLDLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="col-md-5">
+            <h3>About</h3>
+            <p>This TikTok video is the duration of 15 seconds, featuring a short snippet of a blooper that happened in our video, where the football had hit Jacks phone.</p>
+          </div>
+        </div>
+        <!-- /.row -->
+
         <hr>
     <hr>
 
